build(general): :rocket: Added new scopes for VSC Conventional Commits

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -2,6 +2,7 @@
     "conventionalCommits.scopes": [
         "general",
         "library",
-        "data"
+        "data",
+        "notebooks"
     ]
 }
